# BE_drf_practice_K

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  manage.py  practice-kyosra-firebase-adminsdk-2jtd5-ffbdead2ec.json  pyproject.toml
app_k/: admin.py  api_views.py  apps.py  forms.py  models.py  serializers.py  views.py
app_k/migrations/: 0001_initial.py  0002_auto_20220917_1734.py  0002_remove_post_userid_post_nickname_and_more.py  0003_rename_username_friendlist_friend_and_more.py  0004_remove_notification_created_at_and_more.py  0005_remove_friendlist_friend_friendlist_reader_and_more.py  0006_alter_notification_post.py  0007_alter_notification_post.py  0008_alter_customuser_table.py
practice_k/: asgi.py  urls.py  wsgi.py
practice_k/settings/: base.py  dev.py  prod.py
templates/: home.html  login.html  logout.html
